<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/window_padding"
    android:background="@drawable/background_can"
    tools:context=".view.LoginActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pi_waiting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/logo_wigth"
        android:layout_height="@dimen/logo_heigth"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:layout_marginBottom="@dimen/logo_margin_bottom"
        android:contentDescription="@string/login_logo_description"
        android:src="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:hint="@string/login_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_regular"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:hint="@string/login_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/comfortaa_regular"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:textColor="@color/black"
        android:background="@color/color_azul_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/login" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/login_with"
        android:textAlignment="viewStart"
        android:textColor="@color/blanco"
        android:textSize="@dimen/login_text_size"
        android:textStyle="bold" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_google"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="1"
            android:background="@color/color_rojo"
            android:text="@string/login_google"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_facebook"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_weight="1"
            android:background="@color/color_azul"
            android:text="@string/login_facebook"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_registro"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_weight="1"
            android:background="@color/color_verde"
            android:text="@string/registrarse"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_recuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_bottom"
        android:layout_marginTop="@dimen/margin_bottom"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/login_recuperar_cuenta"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="visible"
        tools:visibility="visible" />

</LinearLayout>

