<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="50dp"
            android:gravity="start"
            android:text="@string/crear_cuenta"
            android:textSize="40sp"
            android:fontFamily="@font/comfortaa_regular"
            android:textColor="@color/colorletraregistro" >

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@color/whitetrans"
                android:hint="@string/nombres"
                android:textColorHint="@color/colorletraregistro"
                android:padding="4dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_apellido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@color/whitetrans"
                android:hint="@string/apellidos"
                android:textColorHint="@color/colorletraregistro"
                android:padding="4dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_edad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@color/whitetrans"
                android:inputType="number"
                android:hint="@string/edad"
                android:padding="4dp"
                android:textColorHint="@color/colorletraregistro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_ciudad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@color/whitetrans"
                android:hint="@string/ciudad"
                android:padding="4dp"
                android:textColorHint="@color/colorletraregistro" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/whitetrans"
                android:hint="@string/login_email"
                android:padding="4dp"
                android:textColorHint="@color/colorletraregistro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/whitetrans"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:padding="4dp"
                android:textColorHint="@color/colorletraregistro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_confirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/whitetrans"
                android:hint="@string/confirmaci_n_password"
                android:inputType="textPassword"
                android:padding="4dp"
                android:textColorHint="@color/colorletraregistro" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reg_registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/registrarse" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
